lib/tree-sitter-czlang/test/corpus/expression.txt
==================
Expression
==================

fun x() i32 {
  if 64 == 64{  }

  var a = (a && b) || (c && (d || e))

  var b = -(65 + 34)
  var c = !true
  var d = &value
  var e = a && b && c || e && f
  var f = -89
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
        (if_statement
            (binary_expression
              (int_literal)
              (int_literal))
            (block))
        (var_declaration
            (identifier)
            (binary_expression
              (parenthesized_expression
                (binary_expression
                  (identifier)
                  (identifier)))
              (parenthesized_expression
                (binary_expression
                  (identifier)
                  (parenthesized_expression
                    (binary_expression
                      (identifier)
                      (identifier))
                  )
                )
              )
            )
        )
        (var_declaration
            (identifier)
            (unary_expression
              (parenthesized_expression
                (binary_expression
                  (int_literal)
                  (int_literal)))))
        (var_declaration
            (identifier)
            (unary_expression
              (true)))
        (var_declaration
            (identifier)
            (unary_expression
              (identifier))
        )
        (var_declaration
            (identifier)
            (binary_expression
              (binary_expression
                (binary_expression
                  (identifier)
                  (identifier))
                (identifier))
              (binary_expression
                (identifier)
                (identifier)
              )
            )
        )
        (var_declaration
            (identifier)
            (unary_expression
              (int_literal))
        )
    )
  )
)

==================
Block Expression
==================

fun x() i32 {
  var test = {
    32
  }

  {
    var t2 = true
  }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (var_declaration
        (identifier)
        (block
          (expression_statement
            (int_literal))))
      (expression_statement
        (block
          (var_declaration
            (identifier)
            (true)
          )
        )
      )
    )
  )
)

==================
Block Expression
==================

fun x() {
  var test = if true {
    4
  } else if false {
    true
  } else {
    6
  }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (var_declaration
        (identifier)
        (if_statement
          (true)
          (block
            (expression_statement
              (int_literal)))
          (if_statement
            (false)
            (block
              (expression_statement
                (true)))
            (block
              (expression_statement
                (int_literal)
              )
            )
          )
        )
      )
    )
  )
)
