lib/tree-sitter-czlang/test/corpus/function_call.txt
==================
Function call
==================

fun x() i32 {
  callFunction()
  callFunction(argument1, argument2)
  var test = callFunction()
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (expression_statement
        (function_call
          (identifier)
          (argument_list)))
      (expression_statement
        (function_call
          (identifier)
          (argument_list
            (identifier)
            (identifier))))
      (var_declaration
        (identifier)
        (function_call
          (identifier)
          (argument_list)))
    )
  )
)

==================
Function call with trailing closure
==================

fun x() i32 {
  callFunction(2) {}

  // test block is still working
  var test = {
    2
  }

  {

  }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (expression_statement
        (function_call
          (identifier)
          (argument_list
            (int_literal))
          (block)))
      (comment)
      (var_declaration
        (identifier)
        (block
          (expression_statement
            (int_literal))))
      (expression_statement
        (block)
      )
    )
  )
)

==================
Package Function call
==================

fun x() i32 {
  package1.callFunction(2)
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (expression_statement
        (selector_expression
          (identifier)
          (selector_field
            (function_call
              (identifier)
              (argument_list
                (int_literal)
              )
            )
          )
        )
      )
    )
  )
)
