lib/tree-sitter-czlang/test/corpus/if_expression.txt
==================
if expression
==================

fun x() {
  if true {
    // if
  }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (if_expression
            (true)
            (block
              (comment)
          )
        )
      )
    )
  )
)

==================
if else expression
==================

fun x() {
  if true {
    // if
  } else if false {
    // else if
  } else {
    // else
  }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (if_expression
          (true)
          (block
            (comment))
          (if_expression
            (false)
            (block
              (comment))
            (block
              (comment)
            )
          )
        )
      )
    )
  )
)
