lib/tree-sitter-czlang/test/corpus/if_statement.txt
==================
if statement
==================

fun x() {
  if true {
    // if
  }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
            (true)
            (block
              (comment)))
    )
  )
)

==================
if else statement
==================

fun x() {
  if true {
    // if
  } else if false {
    // else if
  } else {
    // else
  }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
            (true)
            (block
              (comment))
            (if_statement
              (false)
              (block
                (comment))
              (block
                (comment)))
      )
    )
  )
)
