lib/tree-sitter-czlang/test/corpus/import.txt
==================
Imports
==================

import "package1"
import . "test/package"
import p2 "test/package2"

---

(source_file
      (import_declaration
        (interpreted_string_literal))
      (import_declaration
        (dot)
        (interpreted_string_literal))
      (import_declaration
        (identifier)
        (interpreted_string_literal)
      )
)
