lib/tree-sitter-czlang/test/corpus/interface_declaration.txt
==================
interface declaration
==================

interface TestStruct {
    fun method1(test &i32, value2 bool)
    fun method2()
    fun method3() bool
    fun method3() OtherType
    fun methodSelf1(self, value2 bool)
    fun methodSelf2(&self)
    fun methodSelf3(mut &self, value2 mut &i32)
}

---

(source_file
  (interface_declaration
    (identifier)
    (method_spec
        (identifier)
        (self_parameter_list
        (parameter
            (identifier)
            (reference_type (primitive_type)))
        (parameter
            (identifier)
            (primitive_type))))
    (method_spec
        (identifier)
        (self_parameter_list))
    (method_spec
        (identifier)
        (self_parameter_list)
        (primitive_type))
    (method_spec
        (identifier)
        (self_parameter_list)
        (identifier))
    (method_spec
        (identifier)
        (self_parameter_list
            (self_parameter)
            (parameter
                (identifier)
                (primitive_type))))
    (method_spec
        (identifier)
        (self_parameter_list
            (self_parameter)))
    (method_spec
        (identifier)
        (self_parameter_list
            (self_parameter)
            (parameter
                (identifier)
                (reference_type (primitive_type))
            )
        )
    )
  )
)
