lib/tree-sitter-czlang/test/corpus/pipe.txt
==================
Pipe operators
==================

fun x(arg i32 ? null) i32 ? bool {
    arg
        |> $ |> 2
        |?> _ ? false
    return arg |> 5
}

---

(source_file
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (error_type
              (primitive_type)
              (error_op)
              (primitive_type))))
        (error_type
          (primitive_type)
          (error_op)
          (primitive_type))
        (block
          (expression_statement
            (pipe_expression
              (identifier)
              (pipe_expression
                (identifier)
                (err_pipe_expression
                  (int_literal)
                  (error_expression
                    (error_op)
                    (false))))))
          (return_statement
            (pipe_expression
              (identifier)
              (int_literal)
            )
          )
        )
    )
)

==================
Pipe with error return
==================

fun x(arg i32 ? null) {
    (arg
        |> $
        |> 2
        |?> _ ? false)?
}

---

(source_file
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (error_type
              (primitive_type)
              (error_op)
              (primitive_type))))
        (block
          (expression_statement
            (parenthesized_expression
              (pipe_expression
                (identifier)
                (pipe_expression
                  (identifier)
                  (err_pipe_expression
                    (int_literal)
                    (error_expression
                      (error_op)
                      (false))))))
            (error_op)
          )
        )
    )
)
