lib/tree-sitter-czlang/test/corpus/string_literal.txt
==================
String literal
==================

fun x() {
  var b = "text {var}, test2 {var2}"
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
        (var_declaration
            (identifier)
            (interpreted_string_literal
              (embedded_expr
                (identifier))
              (embedded_expr
                (identifier)))
        )
    )
  )
)
