lib/tree-sitter-czlang/test/corpus/struct_access.txt
==================
struct access
==================

fun main() {
    var test = myStruct.field1.field2
}

---

(source_file
      (function_definition
        (identifier)
        (parameter_list)
        (block
          (var_declaration
            (identifier)
            (selector_expression
              (selector_expression
                (identifier)
                (identifier)
              )
              (identifier)
            )
          )
        )
    )
)
