lib/tree-sitter-czlang/test/corpus/struct_declaration.txt
==================
struct declaration
==================

struct TestStruct {
    value i32
    value2 bool
    value3 &string
    value4 &i32
}

---

(source_file
  (struct_declaration
    (identifier)
    (field_declaration_list
      (field_definition
        (identifier)
        (primitive_type))
      (field_definition
        (identifier)
        (primitive_type))
      (field_definition
        (identifier)
        (reference_type (primitive_type)))
      (field_definition
        (identifier)
        (reference_type (primitive_type))))
  )
)

==================
struct init
==================

fun main() {
    var test = Struct1 {
      field1 = 1,
      field2 = "string",
      field3 = Struct2 {
        field4 = true,
      }
    }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (var_declaration
        (identifier)
        (struct_initialization
          (identifier)
          (keyed_element
            (identifier)
            (int_literal))
          (keyed_element
            (identifier)
            (string_expression))
          (keyed_element
            (identifier)
            (struct_initialization
              (identifier)
              (keyed_element
                (identifier)
                (true)
              )
            )
          )
        )
      )
    )
  )
)

==================
struct init reference
==================

fun main() {
    var test = &Struct1 {
      field1 = 1,
      field2 = "string",
      field3 = Struct2 {
        field4 = true,
      }
    }
}

---

(source_file
      (function_definition
        (identifier)
        (parameter_list)
        (block
          (var_declaration
            (identifier)
            (unary_expression
              (struct_initialization
                (identifier)
                (keyed_element
                  (identifier)
                  (int_literal))
                (keyed_element
                  (identifier)
                  (string_expression))
                (keyed_element
                  (identifier)
                  (struct_initialization
                    (identifier)
                    (keyed_element
                      (identifier)
                      (true)
                    )
                  )
                )
              )
            )
          )
        )
      )
)

==================
package struct init
==================

fun main() {
    var test = package1.Struct1 {
      field1 = 1,
    }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (var_declaration
        (identifier)
        (selector_expression
          (identifier)
          (selector_field
            (struct_initialization
              (identifier)
              (keyed_element
                (identifier)
                (int_literal)
              )
            )
          )
        )
      )
    )
  )
)
