lib/tree-sitter-czlang/test/corpus/typeof.txt
==================
Type fo
==================

fun x() {
    var test bool = true
    if typeof test == bool {

    }
}

---

(source_file
    (function_definition
        (identifier)
        (parameter_list)
        (block
            (var_declaration
                (identifier)
                (primitive_type)
                (true))
            (expression_statement
                (if_expression
                    (binary_expression
                    (unary_expression
                        (identifier))
                    (identifier))
                    (block)
                )
            )
        )
    )
)
