lib/tree-sitter-czlang/test/corpus/var_declaration.txt
==================
Variable declarations
==================

fun x() i32 {
  var test = 5
  var test2 bool = true
  var test3 mut = "test"
  var test3 mut i32 = 34

  var test4 mut i32 = 34
  var test5 mut &i32 = 35
  var test6 &i32 = 36

  var test4 mut i32 | null = null
  var test5 mut &i32 | null = null
  var test6 mut &i32 | bool | &string | null = null
  var test7 &i32 | null = null
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (var_declaration (identifier) (int_literal))
      (var_declaration (identifier) (primitive_type) (true))
      (var_declaration (identifier) (string_expression))
      (var_declaration (identifier) (primitive_type) (int_literal))

      (var_declaration (identifier) (primitive_type) (int_literal))
      (var_declaration (identifier) (reference_type (primitive_type)) (int_literal))
      (var_declaration (identifier) (reference_type (primitive_type)) (int_literal))

      (var_declaration (identifier) (sum_type
          (primitive_type)
          (primitive_type)
        ) (null))
      (var_declaration (identifier) (sum_type
          (reference_type (primitive_type))
          (primitive_type)
        ) (null))
      (var_declaration (identifier) (sum_type
          (reference_type (primitive_type))
          (sum_type
                (primitive_type)
                (sum_type
                  (reference_type
                    (primitive_type))
                  (primitive_type)))
        ) (null))
      (var_declaration (identifier) (sum_type
          (reference_type (primitive_type))
          (primitive_type)
        ) (null))
    )
  )
)

==================
Variable assignment
==================

fun x() i32 {
  var test mut = 5
  test = 6
  str.some = funCall()
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (var_declaration
        (identifier)
        (int_literal))
      (assignment_statement
        (identifier)
        (int_literal))
      (assignment_statement
        (selector_expression
          (identifier)
          (selector_field
            (identifier)))
        (function_call
          (identifier)
          (argument_list)
        )
      )
    )
  )
)


==================
Variable reference
==================

fun x() i32 {
  var test mut = 5
  var ref = &test
  var mutRef = &mut test
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (var_declaration
        (identifier)
        (int_literal))
      (var_declaration
        (identifier)
        (unary_expression
          (identifier)))
      (var_declaration
        (identifier)
        (unary_expression
          (identifier)
        )
      )
    )
  )
)
